--- a/fichierCSS.css
+++ b/fichierCSS.css
@@ -1,4 +1,9 @@
-
+p{ 
+   font-size 24px;
+   color: black;
+   font-family: Arial, Helvetica, sans-serif;
+   text-align: center;
+}
 #page1, #page2, #page3, #page4, #page5, #page6, #page7 {
 	display: block;
 	float: right;
