--- a/stylesheet.css
+++ b/stylesheet.css
@@ -182,50 +182,74 @@ body{
 .skill0{
     margin-top: 60px;
 }
+
 .skill1{
-    display: flex;
+    display: block;
 }
 
 
 .skill1 .LfrontEnd{
-    display: flex;
-    flex-direction: column;
+    display: block;
     font-size: 20px;
     font-weight: 500px;
     font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
+    float: right;
     
 }
-.skill1 .LfrontEnd span {
+
+.skill1 .LfrontEnd1{
+    display: block;
+    font-size: 20px;
+    font-weight: 500px;
+    font-family: Arial, Helvetica, sans-serif;
+    float: left;
+}
+
+
+.skill1 .LfrontEnd div {
     margin: 10px;
-    margin-right: 600px;
     border-radius: 15px;
     box-shadow: inset 9.91px 9.91px 15px #D9E355,
      inset -9.91px -9.91px 15px #FFFF65;
+     padding: 5px;
 }
-.LfrontEnd{
-    margin-right: -590px;
+
+.skill1 .LfrontEnd1 div {
+    margin: 10px;
+    border-radius: 15px;
+    box-shadow: inset 9.91px 9.91px 15px #D9E355,
+     inset -9.91px -9.91px 15px #FFFF65;
+     padding: 5px;
+     
 }
-.skill1 .bar{
+
+
+.skill1 .bar-container .bar{
     width: 300px;
-    height: 30px;
+    height: 38px;
     border-radius: 20px;
     margin: 10px;
-    margin-right: 900px;
 
+}
+
+.skill1 .bar-container{
+    float: left;
 }
 
 .bar-container .bar{
     background-color: gainsboro;
-    float: right;
+
 }
+
 .skill1 .bar-container .bar .progesshtml, .skill1 .bar-container .bar .progessCss,
 .skill1 .bar-container .bar .progessJS, .skill1 .bar-container .bar .progessresp {
-    height: 30px;
+    height: 38px;
     background-color: rgb(83, 108, 219);
     border-radius: 20px;
 
 }
+
+
 
 .skill1 .bar-container .bar .progesshtml{
     width: 275px;
@@ -247,46 +271,69 @@ body{
 /*second competences*/
 
 .skill2{
-    display: flex;
+    display: block;
 }
 .skill2 .Back-end{
-    display: flex;
-    flex-direction: column;
+    display: block;
     font-size: 20px;
     font-weight: 500px;
     font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
+    float: left;
     
 }
-.Back-end{
-    margin-right: -650px;
+
+.skill2 .Back-end2{
+    display: block;
+    font-size: 20px;
+    font-weight: 500px;
+    font-family: Arial, Helvetica, sans-serif;
+    float: left;
+    
 }
 
-.skill2 .Back-end span {
+
+.skill2 .Back-end div {
     margin: 10px;
-    margin-right: 600px;
     border-radius: 15px;
     box-shadow: inset 9.91px 9.91px 15px #D9E355,
      inset -9.91px -9.91px 15px #FFFF65;
+     padding: 5px;
 }
 
+.skill2 .Back-end2 div {
+    margin: 10px;
+    border-radius: 15px;
+    box-shadow: inset 9.91px 9.91px 15px #D9E355,
+     inset -9.91px -9.91px 15px #FFFF65;
+     padding: 5px;
+}
 
 .skill2 .bar{
     width: 300px;
-    height: 30px;
+    height: 38px;
     border-radius: 20px;
     margin: 10px;
 
 }
 
+.skill2 .bar-container{
+    float: left;
+}
+
 .skill2 .bar-container .bar{
     background-color: gainsboro;
-    float: right;
-    margin-right: 310px;
 }
 .skill2 .bar-container .bar .progessionNode, .skill2 .bar-container .bar .progessionExpress,
 .skill2 .bar-container .bar .progessionDB, .skill2 .bar-container .bar .progessionVC {
-    height: 30px;
+    height: 38px;
+    background-color: rgb(83, 108, 219);
+    border-radius: 20px;
+
+}
+
+.skill2 .bar-container .bar .progessionNode1, .skill2 .bar-container .bar .progessionExpress2,
+.skill2 .bar-container .bar .progessionDB3{
+    height: 38px;
     background-color: rgb(83, 108, 219);
     border-radius: 20px;
 
@@ -296,7 +343,18 @@ body{
     width: 150px;
     text-align: right;
 }
+
+.skill2 .bar-container .bar .progessionNode1{
+    width: 160px;
+    text-align: right;
+}
+
 .skill2 .bar-container .bar .progessionExpress{
+    width: 100px;
+    text-align: right;
+}
+
+.skill2 .bar-container .bar .progessionExpress2{
     width: 100px;
     text-align: right;
 }
@@ -304,74 +362,24 @@ body{
     width: 100px;
     text-align: right;
 }
+
+.skill2 .bar-container .bar .progessionDB3{
+    width: 270px;
+    text-align: right;
+}
+
+
 .skill2 .bar-container .bar .progessionVC{
     width: 200px;
     text-align: right;
 }
 
+#fahigkeit{
+    display: none;
+}
+
 /* troisieme competence*/
 
-.competence3{
-    margin-top: 100px;
-}
-.skill3{
-    display: flex;
-}
-.skill3 .soft_skill{
-    display: flex;
-    flex-direction: column;
-    font-size: 20px;
-    font-weight: 500px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-}
-.skill3 .soft_skill span {
-    margin: 10px;
-    margin-right: -550px;
-    border-radius: 15px;
-    box-shadow: inset 9.91px 9.91px 15px #D9E355,
-     inset -9.91px -9.91px 15px #FFFF65;
-     margin-left: 300px;
-}
-
-.skill3 .bar{
-    width: 300px;
-    height: 30px;
-    border-radius: 20px;
-    margin: 10px;
-
-}
-
-.skill3 .bar-container .bar{
-    background-color: gainsboro;
-    float: right;
-    margin-right: 610px;
-}
-.skill3 .bar-container .bar .progessAA, .skill3 .bar-container .bar .progessTW,
-.skill3 .bar-container .bar .progessAU, .skill3 .bar-container .bar .progessCT{
-    height: 30px;
-    background-color: rgb(83, 108, 219);
-    border-radius: 20px;
-
-}
-
-
-.skill3 .bar-container .bar .progessAA{
-    width: 290px;
-    text-align: right;
-}
-.skill3 .bar-container .bar .progessTW{
-    width: 230px;
-    text-align: right;
-}
-.skill3 .bar-container .bar .progessAU{
-    width: 200px;
-    text-align: right;
-}
-.skill3 .bar-container .bar .progessCT{
-    width: 250px;
-    text-align: right;
-}
 
 
 /* css responsive */
@@ -496,9 +504,9 @@ body{
     margin-top: -30px;
 }
 
-.skill2 .bar-container {
+/*.skill2 .bar-container {
     margin-left: 90px;
-}
+}*/
 /*large devices only */
 @media (min-width:1200px){
   
@@ -534,36 +542,135 @@ body{
         height: 300px;
     }
 
-   .skill0 .bar{
-    width: 240px;
-   }
-   .skill1 .bar-container .bar .progesshtml {
-    width: 187px;
-    text-align: right;
-    }
-    .skill1 .bar-container .bar .progessCss {
-        width: 142px;
-        text-align: right;  
-    }
-    .skill1 .bar-container .bar .progessJS {
-        width: 90px;
-        text-align: right;  
-    }
-    .skill1 .bar-container .bar .progessresp {
-        width: 112px;
-        text-align: right;  
-    }
-    .Back-end {
-        margin-right: -679px;
-    }
-    .skill2{
-        margin-top: 20px;
+    .skill1 .LfrontEnd{
+        display: block;
+        font-size: 15px;
+        font-weight: 500px;
+        font-family: Arial, Helvetica, sans-serif;
+        float: left;
+        
     }
 
-    .skill3 {
+    .skill1 .bar-container .bar{
+        width: 212px;
+        height: 30px;
+        border-radius: 20px;
+        margin: 10px;
+    
+    }
+
+    .skill1 .bar-container .bar .progesshtml, .skill1 .bar-container .bar .progessCss,
+    .skill1 .bar-container .bar .progessJS, .skill1 .bar-container .bar .progessresp {
+        height: 30px;
+        background-color: rgb(83, 108, 219);
+        border-radius: 20px;
+
+    }
+
+
+
+    .skill1 .bar-container .bar .progesshtml{
+        width: 187px;
+        text-align: right;
+    }
+    .skill1 .bar-container .bar .progessCss{
+        width: 142px;
+        text-align: right;
+    }
+    .skill1 .bar-container .bar .progessJS{
+        width: 80px;
+        text-align: right;
+    }
+    .skill1 .bar-container .bar .progessresp{
+        width: 112px;
+        text-align: right;
+    }
+
+    .skill2 .Back-end{
         display: block;
+        font-size: 15px;
+        font-weight: 500px;
+        font-family: Arial, Helvetica, sans-serif;
+        float: right;
+    }
+    
+    .skill2 .bar{
+        width: 212px;
+        height: 30px;
+        border-radius: 20px;
+        margin: 10px;
+    
+    }
+    
+    .skill2 .bar-container{
         float: left;
     }
     
+    .skill2 .bar-container .bar{
+        background-color: gainsboro;
+    }
+    .skill2 .bar-container .bar .progessionNode, .skill2 .bar-container .bar .progessionExpress,
+    .skill2 .bar-container .bar .progessionDB, .skill2 .bar-container .bar .progessionVC {
+        height: 30px;
+        background-color: rgb(83, 108, 219);
+        border-radius: 20px;
     
+    }
+
+    .skill1 .LfrontEnd1{
+        display: block;
+        font-size: 15px;
+        font-weight: 500px;
+        font-family: Arial, Helvetica, sans-serif;
+        float: left;
+        
+    }
+
+    .skill2 .Back-end2{
+        display: block;
+        font-size: 15px;
+        font-weight: 500px;
+        font-family: Arial, Helvetica, sans-serif;
+        float: right;
+    }
+    
+    .skill2 .bar{
+        width: 212px;
+        height: 30px;
+        border-radius: 20px;
+        margin: 10px;
+    
+    }
+    
+    .skill2 .bar-container{
+        float: right;
+    }
+    
+    .skill2 .bar-container .bar{
+        background-color: gainsboro;
+    }
+    .skill2 .bar-container .bar .progessionNode, .skill2 .bar-container .bar .progessionExpress,
+    .skill2 .bar-container .bar .progessionDB, .skill2 .bar-container .bar .progessionVC {
+        height: 30px;
+        background-color: rgb(83, 108, 219);
+        border-radius: 20px;
+    
+    }
+
+    .skill2 .bar-container .bar .progessionNode1, .skill2 .bar-container .bar .progessionExpress2,
+    .skill2 .bar-container .bar .progessionDB3{
+        height: 30px;
+        background-color: rgb(83, 108, 219);
+        border-radius: 20px;
+
+    }
+
+    .skill2 .bar-container .bar .progessionDB3{
+        width: 182px;
+        text-align: right;
+    }
+
+    .paper, .dropdown-content{
+        font-size: 15px;
+    }
 }
