--- a/stylesheet.css
+++ b/stylesheet.css
@@ -278,7 +278,7 @@ body{
     font-size: 20px;
     font-weight: 500px;
     font-family: Arial, Helvetica, sans-serif;
-    float: left;
+    float: right;
     
 }
 
