--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,10 +15,6 @@ body{
 }
 
 /* css header*/
-nav{
-    position: fixed; 
-    top: 0
-}
 .name{
     display: block;
     color: black;
@@ -30,10 +26,10 @@ nav{
    display: inline-block;
 }
 
-.project, .competence, .contact, .paper, .git{
+.project, .competence, .contact, .paper, .webChallenge, .git{
     font-size: 18px;
 }
-.project:hover, .competence:hover, .contact:hover, .paper:hover, .git:hover{
+.project:hover, .competence:hover, .contact:hover, .paper:hover, .git:hover, .webChallenge:hover{
     text-decoration: overline;
 }
 .dropdown-content{
@@ -48,7 +44,7 @@ nav{
 .project:hover .dropdown-content{
     display: block;
 }
-.paper:hover .dropdown-content{
+.paper:hover .dropdown-content, .webChallenge:hover .dropdown-content{
     display: block;
 }
 
@@ -101,15 +97,12 @@ nav{
 
 /*css footer */
 .panel-footer{
-    margin-top: 30px;
+    margin-top: 140px;
     padding-top: 35px;
-    padding-bottom: 30px;
     background-color: #222;
     border-top: 0;
 }
-.panel-footer div.row{
-    margin-bottom: 35px;
-}
+
 #phone, #adress{
     line-height: 2;
 }
@@ -674,7 +667,7 @@ nav{
         text-align: right;
     }
 
-    .paper, .dropdown-content{
+    .paper, .dropdown-content, .webChallenge{
         font-size: 15px;
     }
 }
@@ -824,7 +817,7 @@ nav{
         text-align: right;
     }
 
-    .paper, .dropdown-content{
+    .paper, .dropdown-content, .webChallenge{
         font-size: 15px;
     }
 }
