--- a/Multi-step-form.css
+++ b/Multi-step-form.css
@@ -17,7 +17,7 @@ body{
 .imgSidebar{
     position: absolute;
     top: 20px;
-    left: 20px;  
+    left: 20px; 
 }
 .step{
     position: absolute;
@@ -81,10 +81,10 @@ p{
     display: block;
 }
 .formular{
-    position: fixed;
-    width:20%;
-    height: 200px;
-    margin-top:15px;
+  position: absolute;
+  width:67%;
+  height: 200px;
+  margin-top:15px;
 }
 .formular input{
     width: 90%
@@ -117,7 +117,8 @@ p{
 
 .messageError{
     color: red;
-    margin-left: 150px;
+    margin-left: 10px;
+    width: 190%;
 }
 
 
@@ -599,6 +600,7 @@ p{
     position: absolute;
     left: 240px;
   }
+ 
   
   .summaryNavigation button{
     width: 50%;
@@ -606,8 +608,460 @@ p{
     border-radius: 5px;
     border: blue;
   }
+
+  /* /////////////////////////// thank you page ////////////////////*/
+  .thankYou{
+    display: none; 
+    flex-direction: column;
+    position: absolute;
+    width: 59%;
+    height: 500px;
+    left: 310px;
+  }
+
+
+  .thanksImage{
+    margin-top: 190px;
+  }
+
+  .imagethanks{
+    margin-left: 200px;
+  }
+
+  .ThanksText{
+    margin-top: 20px;
+    height: 200px;
+    text-align: center;
+    color: rgba(192, 177, 177, 0.942);
+  }
+
+  .ThanksText h2{
+    color: navy;
+    font-weight: bold;
+  }
+  .ThanksText a{
+    text-decoration-style: none;
+  }
+
+
+
+  /* /////////////////////// Media Queries //////////////////////////////////*/
+
+  @media all and (max-width: 1350px){
+    .main-container {
+      background-color: white;
+      width: 97%;
+      height: 638px;
+      position: absolute;
+      top: 232px;
+      left: 13px;
+      border-radius: 10px;
+      display: flex;
+  }
+    .formular input {
+      width: 198%;
+    }
+    .Btn-next button {
+      width: 93%;
+      height: 40px;
+      border-radius: 5px;
+      border: blue;
+    }
+    .Btn-next {
+      width: 67%;
+      height: 100px;
+      position: absolute;
+      left: 216px;
+      text-align: end;
+      margin-top: 80px;
+    }
+
+    .formular {
+      position: absolute;
+      width: 34%;
+      height: 200px;
+      margin-top: 15px;
+  }
+
+    .messageError{
+      color: red;
+      margin-left: 10px;
+      width: 190%;
+    
+    }
+    
+  }
+
  
- 
+ @media (max-width:767px){
+  
+
+ }
+
+ @media (max-width:640px){
+
+  .formular-container {
+    position: absolute;
+    width: 97%;
+    height: 511px;
+    left: 4px;
+    display: block;
+    margin-top: 170px;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.formular-text {
+  width: 93%;
+  height: 53px;
+  margin-top: 60px;
+  margin-left: 17px;
+  line-height: 1px;
+  margin-top: 8px;
+  font-size: 15px;
+  color: white;
+  margin-right: 12px;
+}
+
+.formular .form-group{
+  width: 91px;
+  margin-left: -3px;
+}
+
+.form-group .labelPhoneNumber, .form-group .labelName, .form-group .labelEmail{
+  font-size: 13px;
+}
+
+
+
+    .imgSidebar {
+      position: absolute;
+      display: none;
+  }
+
+  .main-container {
+    background-color:#afccf7;
+    width: 100%;
+    height: 897px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    border-radius: 10px;
+    display: flex;
+}
+
+.sidbar-container {
+  width: 100%;
+  height: 237px;
+}
+
+  .step {
+    position: absolute;
+    z-index: 1;
+    top: 50px;
+    left: 30px;
+    display: flex;
+    flex-direction: raw; 
+    }
+
+    .step-1-Para, .step-2-Para, .step-3-Para, .step-4-Para{
+      display: none;
+    }
+
+    .step-1, .step-2, .step-3, .step-4 {
+      width: 200%;
+      display: flex;
+      margin: 15px;
+  }
+
+  button {
+    border-radius: 100px;
+    border: 1px solid white;
+    width: 46%;
+    height: 46px;
+    background-color: rgb(76, 76, 225);
+    color: white;
+  }
+  .formular-text {
+    margin-top: 60px;
+    margin-left: 25px;
+  }
+
+  .formular-text h2 {
+    color: rgb(11 11 108);
+    font-weight: bold;
+  }
+
+  .formular {
+    position: absolute;
+    width: 20%;
+    height: 200px;
+    margin-top: 15px;
+    margin-left: 25px;
+  }
+
+.formular input {
+  width: 363%;
+}
+
+.messageError{
+  color: red;
+  margin-left: 10px;
+  width: 190%;
+
+}
+
+.Btn-next button {
+  width: 189%;
+  height: 40px;
+  border-radius: 5px;
+  border: blue;
+}
+
+.Btn-next {
+  width: 77%;
+  height: 100px;
+  position: absolute;
+  left: 220px;
+  text-align: end;
+  margin-top: 166px;
+}
+
+
+
+.payModalitiesFlex {
+  width: 100%;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.arcade, .advances, .pro {
+  width: 340px;
+  height: 94px;
+  background-color: beige;
+  margin-top: 16px;
+  margin-left: 8px;
+  border-radius: 5px;
+  border: 2px solid gray;
+}
+span .spanPay{
+  margin-top: 12px;
+}
+.arcade p, .advances p, .pro p {
+  color: black;
+  margin-left: 59px;
+  margin-top: -45px;
+}
+
+ .payModalitiesFlex {
+  width: 100%;
+  height: 678px;
+  display: flex;
+  flex-direction: column;
+}
+
+.payPlan {
+  position: absolute;
+  width: 97%;
+  height: 600px;
+  left: 7px;
+  margin-top: 164px;
+  display: none;
+  flex-direction: column;
+  background-color: white;
+  border-radius: 10px;
+}
+
+b, strong {
+  font-weight: bolder;
+  margin-top: 20px;
+}
+
+.spanText{
+  color: yellow;
+}
+
+.paymentmodalitychoose {
+  width: 109%;
+  height: 217px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.chooseBarFlex {
+  width: 89%;
+  height: 62px;
+  background-color: rgb(216, 216, 209);
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 3px;
+  margin-right: 32px;
+}
+
+.AddOnsNavigation button, .navigation button {
+  width: 155%;
+  height: 40px;
+  border-radius: 5px;
+  border: blue;
+  margin-right: 4px;
+}
+
+.ChooseBarMonthly {
+  font-weight: bold;
+  color: navy;
+  margin-left: 41px;
+  font-size: 15px;
+}
+
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 24px;
+  margin-right: 0px;
+}
+p {
+  line-height: 1px;
+  margin-top: 8px;
+  font-size: 0.8em;
+  color: white;
+  margin-right: 12px;
+}
+.Planyearly{
+  margin-right: 52px;
+}
+
+.addOns {
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  width: 93%;
+  height: 500px;
+  margin-left: -286px;
+  top: 161px;
+  background-color: white;
+  margin-right: 11px;
+  border-radius: 12px;
+}
+
+.addOnsTitle {
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  top: 30px;
+  left: 39px;
+}
+
+.AddOnsOnlineService {
+  width: 83%;
+  height: 70px;
+  position: absolute;
+  top: 150px;
+  left: 37px;
+  border-radius: 5px;
+  border: 1px solid navy;
+}
+
+.AddOnsLargerStorage {
+  width: 83%;
+  height: 70px;
+  position: absolute;
+  top: 260px;
+  left: 37px;
+  border-radius: 5px;
+  border: 1px solid navy;
+}
+.AddOnsCustomiseProfile {
+  width: 83%;
+  height: 70px;
+  position: absolute;
+  left: 37px;
+  top: 370px;
+  border-radius: 5px;
+  border: 1px solid navy;
+}
+
+.AddOnsNavigation, .navigation {
+  width: 83%;
+  height: 70px;
+  position: absolute;
+  top: 620px;
+  left: 9px;
+}
+
+.Summary {
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  width: 97%;
+  height: 500px;
+  left: -41px;
+  margin-left: 46px;
+  top: 166px;
+  background-color: white;
+  border-radius: 10px;
+}
+.summaryTitle {
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  top: 30px;
+  left: 35px;
+}
+
+.summaryContent {
+  display: flex;
+  flex-direction: column;
+  width: 85%;
+  height: 190px;
+  position: absolute;
+  top: 150px;
+  left: 30px;
+  border-radius: 5px;
+}
+
+.summaryPayPlan {
+  width: 100%;
+  height: 70px;
+  background-color: gray;
+}
+.summaryAddOns {
+  width: 100%;
+  height: 120px;
+}
+
+.summaryNavigation {
+  width: 70%;
+  height: 70px;
+  position: absolute;
+  top: 547px;
+  left: 12px;
+}
+
+.thankYou {
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  width: 98%;
+  height: 500px;
+  left: 4px;
+  background-color: white;
+  border-radius: 10px;
+  top: 186px;
+}
+.thanksImage {
+  margin-top: 147px;
+}
+
+.imagethanks {
+  margin-left: 165px;
+}
+}
   
   
 
