--- a/stylesheet.css
+++ b/stylesheet.css
@@ -95,6 +95,63 @@ body{
     display: none;
 }
 
+.qualities{
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 590px;
+    margin-top: 20px;
+}
+.myStrengths{
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    margin-left: 30px;
+}
+
+.myStrengths .title, .myWeaknesses .title, .myAmbitions .title{
+    height: 50px;
+    text-align: center;
+}
+
+.myStrengths .image, .myWeaknesses .image, .myAmbitions .image{
+    height: 240px;
+}
+.myStrengths .image img, .myWeaknesses .image img, .myAmbitions .image img{
+    width: 100%;
+    height: 240px
+}
+.myStrengths .text, .myWeaknesses .text, .myAmbitions .text{
+    height: 270px;
+    margin-top: 20px;
+    text-align: center;
+    font-size: 100%;
+}
+.myStrengths .text ul, .myWeaknesses .text ul, .myAmbitions .text ul {
+    list-style-type: none;
+    margin-right: 50px;
+    margin-top: 10px;
+  }
+  
+
+
+
+.myWeaknesses{
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    margin-left: 20px;
+}
+
+.myAmbitions{
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    margin-left: 20px;
+    margin-right: 30px;
+}
+
 /*css footer */
 .panel-footer{
     margin-top: 140px;
@@ -522,7 +579,42 @@ body{
 }
 
 /* extra small devices */
+
+
 @media (max-width:767px){
+    qualities {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        justify-content: space-between;
+        height: 1555px;
+        margin-top: 20px;
+    }
+
+    .myStrengths  {
+        display: flex;
+        flex-direction: column;
+        width: 84%;
+        margin-left: 30px;
+    }
+
+    .myWeaknesses {
+        display: flex;
+        flex-direction: column;
+        width: 84%;
+        margin-left: 20px;
+        margin-top: -66px;
+    }
+
+    .myAmbitions {
+        display: flex;
+        flex-direction: column;
+        width: 84%;
+        margin-left: 20px;
+        margin-right: 30px;
+        margin-top: 20px;
+    }
+    
     #collapsable-nav a{
         font-size: 1.2em;
     }
