--- a/stylesheet.css
+++ b/stylesheet.css
@@ -187,6 +187,11 @@ body{
     font-size: 24px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+video{
+     width: 50%;
+    height: 380px
+}
 /* css section 3 */
 
 #section3{
@@ -623,7 +628,7 @@ body{
         margin-bottom: 30px;
         text-align: center;
     }
-    embed{
+    video{
         width: 300px;
         height: 100px;
     }
@@ -773,7 +778,7 @@ body{
         margin-bottom: 30px;
         text-align: center;
     }
-    embed{
+    video{
         width: 300px;
         height: 100px;
     }
