--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,13 +24,16 @@ body{
     list-style-type: none;
     margin: 10px;
    display: inline-block;
+   
 }
 
 .project, .competence, .contact, .paper, .webChallenge, .git{
     font-size: 18px;
+    
 }
 .project:hover, .competence:hover, .contact:hover, .paper:hover, .git:hover, .webChallenge:hover{
     text-decoration: overline;
+    
 }
 .dropdown-content{
     display: none;
@@ -55,12 +58,19 @@ body{
     font-size: 24px;
     margin-top: 120px;
 }
+
+@keyframes photoProfil {
+    from{transform: scale(0,0);}
+    to{transform: scale(1, 1)}
+}
 .photos{
    
     max-width: 500px;
     margin-top: 60px;
     margin-right: 25px;
     margin-left: 200px;
+    animation-name: photoProfil;
+    animation-duration: 3s;
 }
 .menuSecond{
     float: right;
@@ -95,6 +105,7 @@ body{
     display: none;
 }
 
+
 .qualities{
     
     display: flex;
@@ -118,9 +129,17 @@ body{
 .myStrengths .image, .myWeaknesses .image, .myAmbitions .image{
     height: 240px;
 }
+@keyframes imageAnimation{
+    fom{transform: scale(1,1);}
+    to {transform: scale(0.5,0.5);}
+}
+
 .myStrengths .image img, .myWeaknesses .image img, .myAmbitions .image img{
     width: 100%;
-    height: 240px
+    height: 240px;
+    animation: imageAnimation; 
+    animation-duration: 3s;
+    animation-direction: reverse;
 }
 .myStrengths .text, .myWeaknesses .text, .myAmbitions .text{
     height: 270px;
@@ -189,8 +208,8 @@ body{
 }
 
 video{
-     width: 85%;
-    height: 380px;
+    width: 83%; 
+    height: 360px; 
 }
 /* css section 3 */
 
