--- a/stylesheet.css
+++ b/stylesheet.css
@@ -757,11 +757,35 @@ video{
 /* Medium devices only */
 @media (min-width:992px) and (max-width:1999px) {
   
-    
+    .photos {
+        max-width: 500px;
+        margin-top: 107px;
+        margin-right: 25px;
+        margin-left: 80px;
+        animation-name: photoProfil;
+        animation-duration: 3s;
+    }
+
+    .menuSecond {
+        float: right;
+        margin-right: 100px;
+        padding: 20px;
+        padding-left: 85px;
+        width: 100%;
+    }
 }
 
 /*small devices only */
 @media (min-width:768px) and (max-width:991px) {
+    .brevepresentation {
+        margin-right: -155px;
+        font-size: 24px;
+        margin-top: 82px;
+        margin-left: 64px;
+    }
+    .photos {
+        margin-left: 148px;
+    }
     
 }
 
